[package]
name = "node-template"
version = "2.0.0"
authors = ["Anonymous"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "node-template"
path = "src/main.rs"

[dependencies]
error-chain = "0.12"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.7.1"
parity-codec = "3.3"
trie-root = "0.12.2"
sr-io = { git = "https://github.com/laddernetwork/substrate", branch = "ladder" }
substrate-cli = { git = "https://github.com/laddernetwork/substrate", branch = "ladder" }
primitives = { package = "substrate-primitives", git = "https://github.com/laddernetwork/substrate", branch = "ladder" }
substrate-executor = { git = "https://github.com/laddernetwork/substrate", branch = "ladder" }
substrate-service = { git = "https://github.com/laddernetwork/substrate", branch = "ladder" }
inherents = { package = "substrate-inherents", git = "https://github.com/laddernetwork/substrate", branch = "ladder" }
transaction-pool = { package = "substrate-transaction-pool", git = "https://github.com/laddernetwork/substrate", branch = "ladder" }
network = { package = "substrate-network", git = "https://github.com/laddernetwork/substrate", branch = "ladder" }
consensus = { package = "substrate-consensus-aura", git = "https://github.com/laddernetwork/substrate", branch = "ladder" }
substrate-client = { git = "https://github.com/laddernetwork/substrate", branch = "ladder" }
basic-authorship = { package = "substrate-basic-authorship", git = "https://github.com/laddernetwork/substrate", branch = "ladder" }
node-template-runtime = { path = "runtime" }

[build-dependencies]
vergen = "3"

[workspace]
members = [
    "rml-move",
	"vm",
	"mock",
	"vm/crypto",
	"vm/nextgen_crypto",
	"compiler",
	"compiler/ir_to_bytecode",
	"compiler/stdlib",
]