[package]
name = "caster"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm = { path = "../vm" }
crypto = { path = "../vm/crypto" }
canonical_serialization = { path = "../vm/canonical_serialization" }
mock = { path = "../mock" }
compiler = { path = "../compiler" }

clap = "2.32"
bincode = "1.1.4"
serde = { version = "1.0" }
serde_json = "1.0"
hex = "0.3"
dirs = "2.0"