[package]
name = "compiler"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = { path = "../vm/failure_ext", package = "failure_ext" }
ir_to_bytecode = { path = "ir_to_bytecode" }
stdlib = { path = "stdlib" }
vm = { path = "../vm" }
log = "0.4.7"
structopt = "0.2.15"
serde_json = "1.0.40"