[package]
name = "mock"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.3.2"
rand = "0.6.5"
lazy_static = "1.3.0"
vm = { path = "../vm" }
crypto = { path = "../vm/crypto" }
failure = { package = "failure_ext", path = "../vm/failure_ext" }
stdlib = { path = "../compiler/stdlib" }
compiler = { path = "../compiler" }
vm_cache_map = { path = "../vm/vm_cache_map" }