[package]
name = "vm"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.1"
rayon = "1.1"
bincode = "1.1.4"
itertools = "0.8.0"
rand = "0.6.5"
log = "0.4"
petgraph = "0.4"
rental = "0.5.4"
tiny-keccak = "1.5.0"
bitcoin_hashes = "0.3.0"
mirai-annotations = "^1.2.2"
byteorder = "1.3.2"
hex = "0.3.2"
lazy_static = "1.3.0"
failure = { package = "failure_ext", path = "./failure_ext" }
crypto = { path = "./crypto" }
nextgen_crypto = { path = "./nextgen_crypto" }
canonical_serialization = { path = "./canonical_serialization" }
vm_cache_map = { path = "./vm_cache_map" }
proptest = { version = "0.9" }
proptest-derive = { version = "0.1.1" }
serde = { version = "1.0" }

[dependencies.prometheus]
version  = "0.4.2"
default-features = false
features = ["push"]